RESOLVED FIXED179466
Include a more complete block signature in public headers to avoid potential -Wstrict-prototypes warnings
https://bugs.webkit.org/show_bug.cgi?id=179466
Summary Include a more complete block signature in public headers to avoid potential ...
Joseph Pecoraro
Reported 2017-11-08 21:22:53 PST
Sometimes when building against a local build of WebKit I see errors like: > WKHTTPCookieStore.h:59:78: error: this block declaration is not a prototype [-Werror,-Wstrict-prototypes] > - (void)setCookie:(NSHTTPCookie *)cookie completionHandler:(nullable void (^)())completionHandler; > ^ > void > WKHTTPCookieStore.h:64:81: error: this block declaration is not a prototype [-Werror,-Wstrict-prototypes] > - (void)deleteCookie:(NSHTTPCookie *)cookie completionHandler:(nullable void (^)())completionHandler; > ^ > void > 2 errors generated. We can address this my providing a by providing a better block signature, more in line with other WebKit void block signatures.
Attachments
[PATCH] Proposed Fix (3.06 KB, patch)
2017-11-08 21:23 PST, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2017-11-08 21:23:22 PST
Created attachment 326427 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 2 2017-11-08 22:05:13 PST
Comment on attachment 326427 [details] [PATCH] Proposed Fix Clearing flags on attachment: 326427 Committed r224619: <https://trac.webkit.org/changeset/224619>
WebKit Commit Bot
Comment 3 2017-11-08 22:05:15 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2017-11-15 09:40:06 PST
Note You need to log in before you can comment on or make changes to this bug.