Include a more complete block signature in public headers to avoid potential -Wstrict-prototypes warnings https://bugs.webkit.org/show_bug.cgi?id=179466

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-11-08
Reviewed by Dan Bernstein.

* UIProcess/API/Cocoa/WKHTTPCookieStore.h:
* UIProcess/API/Cocoa/WKHTTPCookieStore.mm:
(-[WKHTTPCookieStore setCookie:completionHandler:]):
(-[WKHTTPCookieStore deleteCookie:completionHandler:]):

Canonical link: https://commits.webkit.org/195518@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224619 268f45cc-cd09-0410-ab3c-d52691b4dbfc